--- a/css/style.css
+++ b/css/style.css
@@ -20,15 +20,15 @@ body {
   height: 100vh;
 }
 
-body::-webkit-scrollbar{
+body::-webkit-scrollbar {
   width: 0.85rem;
 }
 
-body::-webkit-scrollbar-track{
+body::-webkit-scrollbar-track {
   background: var(--color-white);
 }
 
-body::-webkit-scrollbar-thumb{
+body::-webkit-scrollbar-thumb {
   background: var(--color-grey-dark-2);
 }
 
@@ -46,7 +46,7 @@ main {
   --color-primary-light: #348aa0;
   --color-blue-dark: #1080b4;
   --color-blue: #2183B2;
-  --color-blue-light:#44aec9;
+  --color-blue-light: #44aec9;
   --color-grey: #e1e0e0;
   --color-grey-light: #fafafa;
   --color-grey-light-2: #ccc;
@@ -99,6 +99,15 @@ nav {
   color: #fff;
   text-decoration: none;
   outline: none;
+  transition: color .3s ease;
+  -webkit-transition: color .3s ease;
+  -moz-transition: color .3s ease;
+  -ms-transition: color .3s ease;
+  -o-transition: color .3s ease;
+}
+
+.navigation .logo:hover {
+  color: rgb(219, 218, 218);
 }
 
 .navigation__items {
@@ -113,11 +122,11 @@ nav {
   text-decoration: none;
   outline-style: none;
   color: white;
-  transition: margin 0.2s;
-  -webkit-transition: margin 0.2s;
-  -moz-transition: margin 0.2s;
-  -ms-transition: margin 0.2s;
-  -o-transition: margin 0.2s;
+  transition: all .3s;
+  -webkit-transition: all .3s;
+  -moz-transition: all .3s;
+  -ms-transition: all .3s;
+  -o-transition: all .3s;
 }
 
 .navigation__items a:hover {
@@ -246,9 +255,11 @@ nav {
     -webkit-transform: rotate(-45deg) translate(0, 0);
     opacity: 0;
   }
+
   50% {
     opacity: 1;
   }
+
   100% {
     -webkit-transform: rotate(-45deg) translate(-20px, 20px);
     opacity: 0;
@@ -483,7 +494,7 @@ nav {
   align-items: center;
   width: 70%;
   height: 60%;
-  
+
 }
 
 .about__content h1 {
@@ -512,7 +523,7 @@ nav {
   text-align: justify;
   font-weight: 400;
   color: #191c1f;
-  
+
   margin: 0 5rem;
   margin-top: 15px;
 }
@@ -528,9 +539,7 @@ nav {
   margin-bottom: 1rem;
 }
 
-.about__box social a {
-  
-}
+.about__box social a {}
 
 .about__box-social img {
   width: 4rem;
@@ -652,32 +661,63 @@ nav {
 .skill__content--box {
   display: flex;
   height: 22rem;
-  max-width: 54rem;
-  width: 100%;
+  min-width: 54rem;
+  /* width: 100%; */
   position: relative;
+  /* background: red */
 }
+
+.skill__overlay {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  /* background: orange; */
+  transition: all 1.25s ease;
+}
+
+/* .skill__overlay:hover{
+  height: 100%;
+} */
 
 .skill__content--stack {
   font-family: 'Text Me One', sans-serif;
   font-size: 2.5rem;
   color: #191c1f;
   position: absolute;
-  top: 3.5rem;
-  left: 5rem;
-  transition: transform 0.3s;
+  top: 0%;
+  left: 2%;
+  transition: all 1.25s ease;
   cursor: pointer;
+  pointer-events: none;
 }
 
-.skill__content--stack:hover {
-  transform: scale(1.2);
+.animated-skill {
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
 }
+
+.scale {
+  transform: scale(2) skewX(0deg);
+  -webkit-transform: scale(2) skewX(0deg);
+  -moz-transform: scale(2) skewX(0deg);
+  -ms-transform: scale(2) skewX(0deg);
+  -o-transform: scale(2) skewX(0deg);
+  animation: heartbeat 2s ease-in-out infinite alternate;
+  -webkit-animation: heartbeat 2s ease-in-out infinite alternate;
+}
+
 
 .skill__content--stack:nth-child(1) {
   font-family: 'Text Me One', sans-serif;
   font-size: 1.8rem;
   position: absolute;
-  top: 1rem;
-  left: 27rem;
+  /* top: 1rem;
+  left: 27rem; */
 }
 
 .skill__content--stack:nth-child(2) {
@@ -762,6 +802,83 @@ nav {
   position: absolute;
   top: 6rem;
   left: 22rem;
+}
+
+@keyframes glitch {
+
+  0%,
+  40%,
+  44%,
+  58%,
+  61%,
+  65%,
+  69%,
+  73%,
+  100% {
+    -webkit-transform: skewX(0deg);
+    transform: scale(2) skewX(0deg);
+  }
+
+  41% {
+    -webkit-transform: skewX(10deg);
+    transform: scale(2) skewX(10deg);
+  }
+
+  42% {
+    -webkit-transform: skewX(-10deg);
+    transform: scale(2) skewX(-10deg);
+  }
+
+  59% {
+    -webkit-transform: skewX(40deg) skewY(10deg);
+    transform: scale(2) skewX(40deg) skewY(10deg);
+  }
+
+  60% {
+    -webkit-transform: skewX(-40deg) skewY(-10deg);
+    transform: scale(2) skewX(-40deg) skewY(-10deg);
+  }
+
+  63% {
+    -webkit-transform: skewX(10deg) skewY(-5deg);
+    transform: scale(2) skewX(10deg) skewY(-5deg);
+  }
+
+  70% {
+    -webkit-transform: skewX(-50deg) skewY(-20deg);
+    transform: scale(2) skewX(-50deg) skewY(-20deg);
+  }
+
+  71% {
+    -webkit-transform: skewX(10deg) skewY(-10deg);
+    transform: scale(2) skewX(10deg) skewY(-10deg);
+  }
+}
+
+@keyframes heartbeat {
+  0% {
+    transform: scale(2);
+  }
+
+  20% {
+    transform: scale(1.75);
+  }
+
+  40% {
+    transform: scale(2);
+  }
+
+  60% {
+    transform: scale(1.75);
+  }
+
+  80% {
+    transform: scale(2);
+  }
+
+  100% {
+    transform: scale(2);
+  }
 }
 
 /**********************************************
@@ -877,9 +994,7 @@ nav {
   background: var(--color-secondary);
 }
 
-.btn-project:hover {
-  
-}
+.btn-project:hover {}
 
 .project__illustration {
   height: 25rem;
@@ -942,13 +1057,14 @@ nav {
 .contact-button {
   padding: 10px 30px;
   border-radius: 61px;
-  box-shadow: inset 0 0 0 2px #d4d6d8;;
+  box-shadow: inset 0 0 0 2px #d4d6d8;
   transition: 300ms box-shadow cubic-bezier(0.4, 0, 0.6, 1), 300ms background-color cubic-bezier(0.4, 0, 0.6, 1), 300ms color cubic-bezier(0.4, 0, 0.6, 1);
   color: #31859bff;
 }
 
 .contact-button:hover {
-  box-shadow: inset 0 0 0 4px #d4d6d8;;
+  box-shadow: inset 0 0 0 4px #d4d6d8;
+  ;
 }
 
 .contact-button a {
@@ -956,75 +1072,7 @@ nav {
   font-size: 2rem;
   background: none;
   color: #000;
-}
-
-.contact-box {
-  display: flex;
-  flex-direction: column;
-  height: 30%;
-  max-width: 90%;
-  width: 45%;
-}
-
-.contact-coordinates {
-  height: 5rem;
-  max-width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.contact-coordinates h3 {
-  letter-spacing: 0.2rem;
-  font-size: 2.5rem;
-  color: var(--color-blue);
-}
-
-.box-mail,
-.box-github,
-.box-linkedin {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 5rem;
-  width: 100%;
-  margin: 1rem 0;
-  /* position: relative; */
-}
-
-.box-github,
-.box-linkedin{
-  justify-content: center;
-}
-
-.box-github a,
-.box-linkedin a{
   outline: none;
-}
-
-.box-github img,
-.box-linkedin img{
-  margin-right: 1rem;
-}
-
-.box-linkedin{
-  margin-bottom:0;
-}
-
-.box-mail img,
-.box-github img,
-.box-linkedin img {
-  /* position: absolute;
-  top: 1rem;
-  left: 1rem; */
-  height: 4rem;
-}
-
-.box-mail p,
-.box-github p,
-.box-linkedin p {
-  font-size: 2rem;
-  width: 100%;
 }
 
 .contact__illustration {
@@ -1126,7 +1174,7 @@ footer p {
   }
 }
 
-.fade{
+.fade {
   opacity: 0;
   animation: fade-in-right ease 0.4s forwards;
   -webkit-animation: fade-in-right ease 0.4s forwards;
@@ -1165,7 +1213,7 @@ footer p {
     -moz-transform: translateX(-30px);
     -ms-transform: translateX(-30px);
     -o-transform: translateX(-30px);
-}
+  }
 
   100% {
     opacity: 1;
@@ -1174,7 +1222,7 @@ footer p {
   }
 }
 
-.appearingArrow{
+.appearingArrow {
   -webkit-animation: appearing .5s ease-out .75s;
   animation: appearing .5s ease-out .75s;
   -webkit-animation-fill-mode: backwards;
@@ -1185,12 +1233,12 @@ footer p {
 @keyframes appearing {
   0% {
     opacity: 0;
-}
+  }
 
   100% {
     opacity: 1;
 
-}
+  }
 }
 
 
@@ -1258,7 +1306,7 @@ footer p {
 .bord:hover::after {
   transform: scaleX(1);
   transform-origin: bottom left;
-} 
+}
 
 /* fadeInUp */
 @keyframes btnEntrance {
