--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-  background: var(--color-grey-dark-2);
+  background: var(--color-grey-dark);
 }
 
 main {
@@ -42,16 +42,14 @@ main {
 **********************************************/
 
 :root {
-  --color-primary: #31859bff;
-  --color-primary-light: #348aa0;
-  --color-blue-dark: #1080b4;
-  --color-blue: #2183B2;
-  --color-blue-light: #44aec9;
+  --color-primary-dark: #1080b4;
+  --color-primary: #2183B2;
+  --color-primary-light: #44aec9;
+  --color-secondary: #e74c3c;
   --color-grey: #e1e0e0;
   --color-grey-light: #fafafa;
   --color-grey-light-2: #ccc;
-  --color-grey-dark-2: #777;
-  --color-secondary: #e74c3c;
+  --color-grey-dark: #777;
   --color-white: #fff;
 }
 
@@ -122,11 +120,12 @@ nav {
   text-decoration: none;
   outline-style: none;
   color: white;
-  transition: all .3s;
-  -webkit-transition: all .3s;
-  -moz-transition: all .3s;
-  -ms-transition: all .3s;
-  -o-transition: all .3s;
+  font-weight: 300;
+  transition: all .5s ease;
+  -webkit-transition: all .5s ease;
+  -moz-transition: all .5s ease;
+  -ms-transition: all .5s ease;
+  -o-transition: all .5s ease;
 }
 
 .navigation__items a:hover {
@@ -142,7 +141,7 @@ nav {
   -ms-transition: all 0.5s;
   -o-transition: all 0.5s;
   color: white;
-  background: var(--color-blue-dark);
+  background: var(--color-primary-dark);
 }
 
 .navigation__scroll .logo {
@@ -222,14 +221,11 @@ nav {
   text-decoration: none;
   transition: opacity .3s;
   outline: none;
+  padding-top: 70px;
 }
 
 .hero-icon a:hover {
   opacity: .5;
-}
-
-.hero-icon a {
-  padding-top: 70px;
 }
 
 .hero-icon a span {
@@ -272,7 +268,7 @@ nav {
 **********************************************/
 
 .banner {
-  background: var(--color-blue);
+  background: var(--color-primary);
   background: -webkit-linear-gradient(to left, #31859bff, #31859bff);
   width: 100%;
   height: 100vh;
@@ -507,7 +503,6 @@ nav {
 }
 
 .title-color {
-  /* color: #44aec9; */
   color: #2183B2;
 }
 
@@ -523,7 +518,6 @@ nav {
   text-align: justify;
   font-weight: 400;
   color: #191c1f;
-
   margin: 0 5rem;
   margin-top: 15px;
 }
@@ -600,7 +594,7 @@ nav {
 
 /* .about__btn a:hover {
   transition: background-color 0.4s;
-  background: var(--color-blue-light);
+  background: var(--color-primary-light);
 } */
 
 .about__btn a:nth-child(1) {
@@ -655,16 +649,14 @@ nav {
   display: flex;
   justify-content: center;
   font-size: 4.8rem;
-  color: var(--color-blue);
+  color: var(--color-primary);
 }
 
 .skill__content--box {
   display: flex;
   height: 22rem;
   min-width: 54rem;
-  /* width: 100%; */
   position: relative;
-  /* background: red */
 }
 
 .skill__overlay {
@@ -1043,7 +1035,7 @@ nav {
   font-size: 2.5rem;
   width: 100%;
   margin-bottom: 15px;
-  color: var(--color-blue);
+  color: var(--color-primary);
 }
 
 .contact-header-intro {
@@ -1098,7 +1090,7 @@ footer {
   justify-content: center;
   width: 100%;
   padding: 1.1rem;
-  background: var(--color-blue);
+  background: var(--color-primary);
 }
 
 footer p {
