--- a/css/mq.css
+++ b/css/mq.css
@@ -1043,6 +1043,7 @@
     .hero-text h1 {
         font-size: 3.5rem;
         line-height: 4.5rem;
+        margin-bottom: 8.5rem;
     }
 
     .hero-text img {
