--- a/css/style.css
+++ b/css/style.css
@@ -1168,12 +1168,12 @@ footer p {
 
 .fade {
   opacity: 0;
-  animation: fade-in-right ease 0.4s forwards;
-  -webkit-animation: fade-in-right ease 0.4s forwards;
+  animation: fade-in-right ease 2s forwards;
+  -webkit-animation: fade-in-right ease 2s forwards;
 }
 
 .fade {
-  animation-delay: 0.4s;
+  animation-delay: 2s;
 }
 
 .fadet {
@@ -1185,7 +1185,7 @@ footer p {
   transform-origin: left;
   animation: grow-left cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.5s forwards;
   -webkit-animation: grow-left cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.5s forwards;
-  animation-delay: 0.8s;
+  animation-delay: 2.3s;
 }
 
 
@@ -1194,7 +1194,7 @@ footer p {
   animation: moveInBottom .5s ease-out .75s;
   -webkit-animation-fill-mode: backwards;
   animation-fill-mode: backwards;
-  animation-delay: 1.5s;
+  animation-delay: 2.6s;
 }
 
 @keyframes moveInBottom {
@@ -1219,7 +1219,7 @@ footer p {
   animation: appearing .5s ease-out .75s;
   -webkit-animation-fill-mode: backwards;
   animation-fill-mode: backwards;
-  animation-delay: 2s;
+  animation-delay: 2.8s;
 }
 
 @keyframes appearing {
@@ -1373,5 +1373,79 @@ footer p {
 
   to {
     top: 25px;
+  }
+}
+
+/* loader */
+
+#preloader {
+  height: 100vh;
+  width: 100vw;
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 9999;
+  animation-delay: 2s;
+  background: red
+}
+
+#preloader img{
+  height: 100%;
+  width: 100%;
+}
+
+#overlay {
+  position: fixed;
+  z-index: 99;
+  top: -1000%;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--color-primary);
+  opacity: 0;
+  -webkit-transition: top 0s ease .35s, opacity .35s ease;
+  -moz-transition: top 0s ease .35s, opacity .35s ease;
+  transition: top 0s ease .35s, opacity .35s ease
+}
+
+.loading #preloader {
+  display: block
+}
+
+@-webkit-keyframes preloader {
+  0% {
+    -webkit-transform: scale(0, 0);
+    opacity: .5
+  }
+
+  100% {
+    -webkit-transform: scale(1, 1);
+    opacity: 0
+  }
+}
+
+@-moz-keyframes preloader {
+  0% {
+    -moz-transform: scale(0, 0);
+    opacity: .5
+  }
+
+  100% {
+    -moz-transform: scale(1, 1);
+    opacity: 0
+  }
+}
+
+@keyframes preloader {
+  0% {
+    transform: scale(0, 0);
+    opacity: .5
+  }
+
+  100% {
+    transform: scale(1, 1);
+    opacity: 0
   }
 }
