--- a/css/mq.css
+++ b/css/mq.css
@@ -161,7 +161,7 @@
     .about__content p {}
 
     .about__btn a {
-        font-size: 1.3rem;
+        font-size: 1.5rem;
         padding: 1.1rem 1.4rem;
         margin-right: 1.5rem;
     }
@@ -195,8 +195,6 @@
 @media only screen and (max-width: 56.25em) {
 
     /* NAVIGATION */
-
-    nav {}
 
     .navigation {
         padding: 0px 30px;
@@ -270,7 +268,7 @@
     }
 
     .about__btn a {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
         margin: 0.5rem;
     }
 
@@ -320,18 +318,16 @@
 
     /* PROJECT SECTION */
 
-    .project__box {
-        margin: 0 auto;
-        max-width: 95%;
-        height: 100%;
-    }
-
     .project__portfolio {
         flex-wrap: wrap;
     }
 
     .project__content {
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
         margin-top: 4rem;
+        padding: 0 7.5rem;
     }
 
     .project__content h3 {
@@ -369,7 +365,6 @@
     .project__box--link img {
         height: 4rem;
         width: 4rem;
-        position: relative;
     }
 
     .project__box--link a {
@@ -383,7 +378,6 @@
 
     .project__illustration {
         max-width: 70%;
-        margin-right: 12.5rem;
     }
 
     .project__illustration img {
@@ -504,6 +498,13 @@
         max-width: 450rem;
     }
 
+    /* PROJECT SECTION */
+
+    .project__content {
+        margin-top: 4rem;
+        padding: 0 6.2rem;
+    }
+
     /* CONTACT SECTION */
 
     .contact {
@@ -512,11 +513,11 @@
         height: 40rem;
     }
 
-    .contact div:nth-child(1){
+    .contact div:nth-child(1) {
         order: 1;
     }
 
-    .contact-header div:nth-child(1){
+    .contact-header div:nth-child(1) {
         order: -1;
     }
 
@@ -538,16 +539,16 @@
         align-items: center;
         height: 16rem;
         max-width: 100%;
-      }
-      
-      .contact-header {
+    }
+
+    .contact-header {
         display: flex;
         flex-direction: column;
         align-items: center;
         height: 20rem;
         max-width: 90%;
         margin-top: 0rem;
-      }
+    }
 }
 
 @media only screen and (max-width: 44em) {
@@ -609,6 +610,12 @@
         border-bottom: 7px solid #fff;
     }
 
+    /* PROJECT SECTION */
+
+    .project__content {
+        padding: 0 4.8rem;
+    }
+
     /* CONTACT SECTION */
 
     .contact {
@@ -617,11 +624,11 @@
         height: 40rem;
     }
 
-    .contact div:nth-child(1){
+    .contact div:nth-child(1) {
         order: 1;
     }
 
-    .contact-header div:nth-child(1){
+    .contact-header div:nth-child(1) {
         order: -1;
     }
 
@@ -643,16 +650,16 @@
         align-items: center;
         height: 16rem;
         max-width: 100%;
-      }
-      
-      .contact-header {
+    }
+
+    .contact-header {
         display: flex;
         flex-direction: column;
         align-items: center;
         height: 20rem;
         max-width: 90%;
         margin-top: 0rem;
-      }
+    }
 
 }
 
@@ -736,7 +743,7 @@
     }
 
     .about__btn a {
-        font-size: 1rem;
+        font-size: 1.1rem;
         margin: 0.5rem;
         padding: 1rem;
     }
@@ -765,16 +772,28 @@
 
 
 
-    /* PROJECTS SECTION /*
+    /* PROJECT SECTION */
 
-    .project__illustration {
-        max-width: 100%;
-        margin-left: 5rem;
+    .project__content {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0 3rem;
     }
 
-    .project__illustration img {
-        width: 100%;
+    .project__content h3{
+        margin: 0 auto;
     }
+    
+    .project__content .desc {
+        text-align: center;
+    }
+
+    .project__box--link span{
+        font-size: 1.1rem;
+        margin: 0.5rem;
+        padding: 1rem;
+}
 
 
     /* CONTACT SECTION */
@@ -933,6 +952,7 @@
     .project__content {
         margin-top: 4rem;
         overflow: hidden;
+        padding: 0 3.2rem;
         flex-shrink: 0;
     }
 
@@ -981,17 +1001,13 @@
     }
 
     /* CONTACT SECTION */
-    .contact__illustration {
-        
-    }
+    .contact__illustration {}
 }
 
 @media only screen and (max-width: 30em) {
 
 
     /* NAVIGATION */
-
-    nav {}
 
     .navigation {
         padding: 0px 30px;
@@ -1143,11 +1159,20 @@
         left: 22rem;
     }
 
-    /* PROJECTS SESSION */
+    /* PROJECT SECTION */
+
+    .project__content {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 4rem;
+        padding: 0 4rem;
+    }
 
     .project__content h3 {
-        margin: 0;
         text-align: center;
+        font-size: 2.5rem;
+        margin: 0 auto;
     }
 
     .project__content .desc {
@@ -1170,20 +1195,20 @@
         width: 3rem;
     }
 
-    .icon-merge {
-        position: absolute;
-        left: .5rem;
-    }
-
-    .icon-world {
-        position: absolute;
-        left: 0rem;
-    }
-
     .project__box--link a {
         margin: 0 1.5rem;
         padding: .7rem 1rem;
         font-size: 1.3rem;
+    }
+
+    .project__illustration{
+        width: auto;
+        height: 20rem;
+    }
+
+    .project__illustration img{
+        height: 100%;
+        width: auto;
     }
 
     /* CONTACT SECTION */
@@ -1191,9 +1216,8 @@
     .contact-button {
         padding: 10px 20px;
     }
-                .contact__illustration {
-                    
-                }
+
+    .contact__illustration {}
 }
 
 @media only screen and (max-width: 26.5625em) {
@@ -1354,16 +1378,6 @@
         width: 3rem;
     }
 
-    .icon-merge {
-        position: absolute;
-        left: .5rem;
-    }
-
-    .icon-world {
-        position: absolute;
-        left: 0rem;
-    }
-
     .project__box--link a {
         margin: 0 1.5rem;
         padding: .7rem 1rem;
@@ -1372,9 +1386,7 @@
 
     /* CONTACT SECTION */
 
-    .contact__illustration {
-        
-    }
+    .contact__illustration {}
 }
 
 @media only screen and (max-width: 23.4375em) {
@@ -1546,16 +1558,6 @@
         width: 3rem;
     }
 
-    .icon-merge {
-        position: absolute;
-        left: .5rem;
-    }
-
-    .icon-world {
-        position: absolute;
-        left: 0rem;
-    }
-
     .project__box--link a {
         margin: 0 1rem;
         padding: .7rem .5rem;
@@ -1564,9 +1566,7 @@
 
     /* CONTACT SECTION */
 
-    .contact__illustration {
-        
-    }
+    .contact__illustration {}
 
     .contact-button {
         padding: 7px 15px;
@@ -1610,20 +1610,6 @@
     .navigation__scroll .navigation__items a {
         font-size: .8rem;
     }
-
-    /* .navigation__logo {
-        font-size: 1.2rem;
-    }
-
-    .navigation__item {
-        padding: 1rem .3rem;
-    }
-
-    .navigation__link {
-        font-size: .95rem;
-    } */
-
-
 
     .hero-text h1 {
         font-size: 3rem;
@@ -1751,11 +1737,14 @@
         font-size: 1rem;
     }
 
+    .project__box--link span{
+        font-size: 1rem;
+        padding: .7rem .7rem;
+    }
+
     /* CONTACT SECTION */
 
-    .contact__illustration {
-        
-    }
+    .contact__illustration {}
 
     /* FOOTER */
 
