--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ html {
 
 body {
   height: 100vh;
+  font-weight: 300;
 }
 
 body::-webkit-scrollbar {
@@ -46,11 +47,12 @@ main {
   --color-primary: #2183B2;
   --color-primary-light: #44aec9;
   --color-secondary: #e74c3c;
-  --color-grey: #e1e0e0;
-  --color-grey-light: #fafafa;
-  --color-grey-light-2: #ccc;
   --color-grey-dark: #777;
+  --color-grey: #e1e0e0;
+  --color-grey-light: #d4d6d8;
+  --color-grey-light-2: #fafafa;
   --color-white: #fff;
+  --color-dark: #1D2424;
 }
 
 
@@ -94,7 +96,7 @@ nav {
 .navigation .logo {
   font-size: 3.5rem;
   padding: 60px 0 5px 0;
-  color: #fff;
+  color: var(--color-white);
   text-decoration: none;
   outline: none;
   transition: color .3s ease;
@@ -120,7 +122,6 @@ nav {
   text-decoration: none;
   outline-style: none;
   color: white;
-  font-weight: 300;
   transition: all .5s ease;
   -webkit-transition: all .5s ease;
   -moz-transition: all .5s ease;
@@ -159,17 +160,8 @@ nav {
   -moz-transition: all .3s;
   -ms-transition: all .3s;
   -o-transition: all .3s;
-  color: white;
+  color: var(--color-white);
 }
-
-.navigation__scroll .navigation__items a:hover {
-  /* border-color: var(--color-secondary); */
-}
-
-.navigation__scroll .navigation__items a.active {
-  /* border-color: var(--color-secondary); */
-}
-
 
 /**********************************************
           *** HERO SECTION *** - START
@@ -215,7 +207,7 @@ nav {
   display: inline-block;
   -webkit-transform: translate(0, -50%);
   transform: translateX(-50%) translateY(-50%);
-  color: #fff;
+  color: var(--color-white);;
   font: normal 400 20px/1 'Josefin Sans', sans-serif;
   letter-spacing: .1em;
   text-decoration: none;
@@ -236,8 +228,8 @@ nav {
   width: 24px;
   height: 24px;
   margin-left: -12px;
-  border-left: 10px solid #fff;
-  border-bottom: 10px solid #fff;
+  border-left: 10px solid var(--color-white);;
+  border-bottom: 10px solid var(--color-white);;
   -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg);
   -webkit-animation: pulse 1.5s infinite;
@@ -495,19 +487,14 @@ nav {
 
 .about__content h1 {
   font-size: 4.8rem;
-  font-weight: 700;
   text-align: center;
-  color: #191c1f;
+ color: var(--color-dark);
   margin: 1.4rem auto;
   max-width: 100%;
 }
 
-.title-color {
-  color: #2183B2;
-}
-
-.border-row {
-  border-bottom: 0.7rem solid #31859bff;
+.high {
+  color: var(--color-primary);
 }
 
 .about__content p {
@@ -516,14 +503,13 @@ nav {
   line-height: 2.5rem;
   letter-spacing: .02rem;
   text-align: justify;
-  font-weight: 400;
-  color: #191c1f;
   margin: 0 5rem;
   margin-top: 15px;
+  color: var(--color-dark);
 }
 
-.highlith {
-  color: #31859bff;
+.highlith{
+  color: var(--color-primary)
 }
 
 .about__box-social {
@@ -533,7 +519,11 @@ nav {
   margin-bottom: 1rem;
 }
 
-.about__box social a {}
+.about__box-social a {
+  text-decoration: none;
+  outline: none;
+  color: var(--color-dark);
+}
 
 .about__box-social img {
   width: 4rem;
@@ -670,46 +660,29 @@ nav {
   width: 100%;
   height: 100%;
   text-align: center;
-  /* background: orange; */
   transition: all 1.25s ease;
 }
-
-/* .skill__overlay:hover{
-  height: 100%;
-} */
 
 .skill__content--stack {
   font-family: 'Text Me One', sans-serif;
   font-size: 2.5rem;
-  color: #191c1f;
   position: absolute;
   top: 0%;
   left: 2%;
-  transition: all 1.25s ease;
   cursor: pointer;
-  pointer-events: none;
+  color: var(--color-dark);
+  transition: transform .5s ease-in;
+  -webkit-transition: transform .5s ease-in;
+  -moz-transition: transform .5s ease-in;
+  -ms-transition: transform .5s ease-in;
+  -o-transition: transform .5s ease-in;
 }
 
-.animated-skill {
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
+.skill__content--stack:hover{
+  animation: vertical 1s ease;
+  animation-iteration-count: 1;
+  -webkit-animation: vertical 1s ease;
 }
-
-.scale {
-  transform: scale(2) skewX(0deg);
-  -webkit-transform: scale(2) skewX(0deg);
-  -moz-transform: scale(2) skewX(0deg);
-  -ms-transform: scale(2) skewX(0deg);
-  -o-transform: scale(2) skewX(0deg);
-  animation: heartbeat 2s ease-in-out infinite alternate;
-  -webkit-animation: heartbeat 2s ease-in-out infinite alternate;
-}
-
 
 .skill__content--stack:nth-child(1) {
   font-family: 'Text Me One', sans-serif;
@@ -803,57 +776,6 @@ nav {
   left: 22rem;
 }
 
-@keyframes glitch {
-
-  0%,
-  40%,
-  44%,
-  58%,
-  61%,
-  65%,
-  69%,
-  73%,
-  100% {
-    -webkit-transform: skewX(0deg);
-    transform: scale(2) skewX(0deg);
-  }
-
-  41% {
-    -webkit-transform: skewX(10deg);
-    transform: scale(2) skewX(10deg);
-  }
-
-  42% {
-    -webkit-transform: skewX(-10deg);
-    transform: scale(2) skewX(-10deg);
-  }
-
-  59% {
-    -webkit-transform: skewX(40deg) skewY(10deg);
-    transform: scale(2) skewX(40deg) skewY(10deg);
-  }
-
-  60% {
-    -webkit-transform: skewX(-40deg) skewY(-10deg);
-    transform: scale(2) skewX(-40deg) skewY(-10deg);
-  }
-
-  63% {
-    -webkit-transform: skewX(10deg) skewY(-5deg);
-    transform: scale(2) skewX(10deg) skewY(-5deg);
-  }
-
-  70% {
-    -webkit-transform: skewX(-50deg) skewY(-20deg);
-    transform: scale(2) skewX(-50deg) skewY(-20deg);
-  }
-
-  71% {
-    -webkit-transform: skewX(10deg) skewY(-10deg);
-    transform: scale(2) skewX(10deg) skewY(-10deg);
-  }
-}
-
 @keyframes heartbeat {
   0% {
     transform: scale(2);
@@ -912,10 +834,9 @@ nav {
 
 .project__content h3 {
   font-size: 3rem;
-  font-weight: 400;
   max-width: 230%;
   margin-left: 5rem;
-  color: #191c1f;
+ color: var(--color-primary);
 }
 
 .project__content .desc {
@@ -938,16 +859,15 @@ nav {
 }
 
 .project__box--stack p {
+  font-size: 1.7rem;
   padding: 0.5rem 1rem;
   margin: 0.65rem;
-  font-size: 1.7rem;
-  font-weight: 400;
 }
 
 .highlith-stack {
   border-radius: 0.5rem;
   padding: 0.2rem 0.3rem;
-  background-color: #d4d6d8;
+  background: var(--color-grey-light);
 }
 
 .project__box--link {
@@ -958,42 +878,32 @@ nav {
   margin: .5rem 0 0 3rem;
 }
 
+.project__box--link a{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 1.95rem;
+  text-decoration: none;
+  outline: none;
+}
+
 .project__box--link img {
   height: 4rem;
   width: 4rem;
-  position: relative;
 }
 
-.icon-merge {
-  position: absolute;
-  left: 1rem;
-}
-
-.icon-world {
-  position: absolute;
-  left: 1rem;
-}
-
-.project__box--link a {
-  padding: 1rem 1.5rem;
-  margin-left: 2rem;
-  color: var(--color-white);
+.project__box--link span{
   font-size: 1.5rem;
-}
-
-.btn-project {
-  display: flex;
-  justify-content: center;
-  border-radius: 2.5rem;
-  border: none;
   text-decoration: none;
   text-transform: capitalize;
+  padding: 1rem 1.5rem;
+  margin-left: 2rem;
+  border-radius: 2.5rem;
+  border: none;
   transition: background-color 0.4s;
-  background: var(--color-primary);
+  color: var(--color-white);
   background: var(--color-secondary);
 }
-
-.btn-project:hover {}
 
 .project__illustration {
   height: 25rem;
@@ -1050,8 +960,8 @@ nav {
 .contact-header-intro {
   font-size: 1.8rem;
   line-height: 25px;
-  width: 80%;
   text-align: center;
+  width: 80%;
   margin-bottom: 15px;
 }
 
@@ -1060,19 +970,16 @@ nav {
   border-radius: 61px;
   box-shadow: inset 0 0 0 2px var(--color-secondary);
   transition: 300ms box-shadow cubic-bezier(0.4, 0, 0.6, 1), 300ms background-color cubic-bezier(0.4, 0, 0.6, 1), 300ms color cubic-bezier(0.4, 0, 0.6, 1);
-  color: #31859bff;
 }
 
 .contact-button:hover {
   box-shadow: inset 0 0 0 4px var(--color-secondary);
-  ;
 }
 
 .contact-button a {
   text-decoration: none;
   font-size: 2rem;
-  background: none;
-  color: #000;
+  color: var(--color-dark);
   outline: none;
 }
 
@@ -1241,10 +1148,6 @@ footer p {
 }
 
 
-.viber {
-  color: #474E51;
-}
-
 .viber:hover {
   animation: viber 1s ease;
   animation-iteration-count: 1;
@@ -1282,8 +1185,6 @@ footer p {
   animation-name: btnEntrance;
 }
 
-/* BORD */
-
 .bord {
   display: inline-block;
   position: relative;
@@ -1308,6 +1209,7 @@ footer p {
 }
 
 /* fadeInUp */
+
 @keyframes btnEntrance {
   from {
     opacity: 0;
@@ -1383,77 +1285,30 @@ footer p {
   }
 }
 
-/* loader */
-
-#preloader {
-  height: 100vh;
-  width: 100vw;
-  display: none;
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: 9999;
-  animation-delay: 2s;
-}
-
-#preloader img{
-  height: 100%;
-  width: 100%;
-}
-
-#overlay {
-  position: fixed;
-  z-index: 99;
-  top: -1000%;
-  left: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  background: var(--color-primary);
-  opacity: 0;
-  -webkit-transition: top 0s ease .35s, opacity .35s ease;
-  -moz-transition: top 0s ease .35s, opacity .35s ease;
-  transition: top 0s ease .35s, opacity .35s ease;
-  -ms-transition: top 0s ease .35s, opacity .35s ease;
-  -o-transition: top 0s ease .35s, opacity .35s ease;
-}
-
-.loading #preloader {
-  display: block
-}
-
-@-webkit-keyframes preloader {
-  0% {
-    -webkit-transform: scale(0, 0);
-    opacity: .5
+@keyframes vertical
+{
+  15%
+  {
+      transform: translateY(6px);
   }
-
-  100% {
-    -webkit-transform: scale(1, 1);
-    opacity: 0
+  30%
+  {
+      transform: translateY(-6px);
   }
-}
-
-@-moz-keyframes preloader {
-  0% {
-    -moz-transform: scale(0, 0);
-    opacity: .5
+  50%
+  {
+      transform: translateY(4px);
   }
-
-  100% {
-    -moz-transform: scale(1, 1);
-    opacity: 0
+  65%
+  {
+      transform: translateY(-2px);
   }
-}
-
-@keyframes preloader {
-  0% {
-    transform: scale(0, 0);
-    opacity: .5
+  80%
+  {
+      transform: translateY(2px);
   }
-
-  100% {
-    transform: scale(1, 1);
-    opacity: 0
+  100%
+  {
+      transform: translateY(0);
   }
 }
