--- a/css/style.css
+++ b/css/style.css
@@ -1021,6 +1021,22 @@ footer p {
   transition-property: background-color, color;
 }
 
+.btn-animate{
+  transition: all .2s ease-in;
+  -webkit-transition: all .2s ease-in;
+  -moz-transition: all .2s ease-in;
+  -ms-transition: all .2s ease-in;
+  -o-transition: all .2s ease-in;
+}
+
+.btn-animate:hover{
+  transform: translateY(-15px);
+  -webkit-transform: translateY(-15px);
+  -moz-transform: translateY(-15px);
+  -ms-transform: translateY(-15px);
+  -o-transform: translateY(-15px);
+}
+
 .index img {
   width: 4rem;
 }
