--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,33 @@
 /**********************************************
+*** FONTS ***
+**********************************************/
+
+@import url('https://fonts.googleapis.com/css2?family=Bahiana&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Atomic+Age&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Text+Me+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cabin&family=Lato:wght@300;400&display=swap');
+
+/**********************************************
+              *** VARIABLES ***
+**********************************************/
+
+:root {
+  --color-primary-dark: #1080b4;
+  --color-primary: #2183B2;
+  --color-primary-light: #44aec9;
+  --color-secondary: #e74c3c;
+  --color-grey-dark: #777;
+  --color-grey: #e1e0e0;
+  --color-grey-light: #d4d6d8;
+  --color-grey-light-2: #fafafa;
+  --color-white: #fff;
+  --color-dark: #1D2424;
+}
+
+/**********************************************
               *** GLOBAL ***
 **********************************************/
 
@@ -38,22 +67,7 @@ main {
   margin: auto;
 }
 
-/**********************************************
-              *** VARIABLES ***
-**********************************************/
 
-:root {
-  --color-primary-dark: #1080b4;
-  --color-primary: #2183B2;
-  --color-primary-light: #44aec9;
-  --color-secondary: #e74c3c;
-  --color-grey-dark: #777;
-  --color-grey: #e1e0e0;
-  --color-grey-light: #d4d6d8;
-  --color-grey-light-2: #fafafa;
-  --color-white: #fff;
-  --color-dark: #1D2424;
-}
 
 
 /**********************************************
@@ -98,6 +112,7 @@ nav {
   padding: 60px 0 5px 0;
   color: var(--color-white);
   text-decoration: none;
+  font-weight: 300;
   outline: none;
   transition: color .3s ease;
   -webkit-transition: color .3s ease;
@@ -121,7 +136,7 @@ nav {
   font-size: 2.5rem;
   text-decoration: none;
   outline-style: none;
-  color: white;
+  color: var(--color-white);
   transition: all .5s ease;
   -webkit-transition: all .5s ease;
   -moz-transition: all .5s ease;
@@ -180,7 +195,6 @@ nav {
 }
 
 .hero-text h1 {
-  font-weight: 700;
   font-size: 6rem;
   text-align: center;
   line-height: 8rem;
@@ -189,8 +203,9 @@ nav {
 }
 
 .hero-text img {
-  width: 6rem;
+  width: 5rem;
   margin-left: .5rem;
+  margin-bottom: 1.2rem;
   cursor: pointer;
 }
 
@@ -990,13 +1005,13 @@ footer {
   display: flex;
   justify-content: center;
   width: 100%;
-  padding: 1.1rem;
+  padding: 1.7rem;
   background: var(--color-primary);
 }
 
 footer p {
   color: var(--color-white);
-  font-size: 2rem;
+  font-size: 2.1rem;
 }
 
 /**********************************************
